--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         (70,000,000 rupees).</p>
 
     <h2 style="text-align: center; color: cadetblue;">Answer all the questions carefully. And open your console to see result</h2>
+    <h3>Note=> If prompt doesn't appear reload your page once</h3>
 
     <script src="assignment_nov29.js"></script>
 </body>
